# HPGPU_CUDA

Ex1/: Ex1.txt  lab01_hamdaan.cu
Ex2/: Notes  a.out  lab01-solution.cu  lab02-task0.cu
Ex3/: lab03_gol_cpu_code_skeleton.c
Ex3/lab-reduction/: CMakeLists.txt  README.md  get-cub.sh
Ex3/lab-reduction/cmake/: safeguards.cmake
Ex3/lab-reduction/src/: CMakeLists.txt  reduction.cu
ex4/lab05-matmul/: Makefile  matmul  matmul.cu
